--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class=" container ">
                 <div class="py-3 ">
                     <div
-                        class="bg-success bg-opacity-50 shadow rounded-4 d-flex justify-content-center align-items-center">
+                        class="bg-warning bg-opacity-50 shadow rounded-4 d-flex justify-content-center align-items-center">
                         <img src="images/Germany-Flag-icon.png" class="imgW mx-4">
                         <h1 class=" text-light py-2 text-center ">A2.2"Frau Nada"
                         </h1>
